implemented client authentication tests

--- a/iam-core/build.gradle
+++ b/iam-core/build.gradle
@@ -11,6 +11,8 @@ repositories {
 }
 
 dependencies {
+    implementation('org.slf4j:slf4j-api:1.7.30')
+    implementation('org.slf4j:slf4j-simple:1.7.30')
     implementation('io.jsonwebtoken:jjwt-api:0.11.0')
     implementation('io.jsonwebtoken:jjwt-impl:0.11.0')
     implementation('io.jsonwebtoken:jjwt-jackson:0.11.0')
