--- a/iam-core/build.gradle
+++ b/iam-core/build.gradle
@@ -12,12 +12,12 @@ repositories {
 
 dependencies {
     implementation('org.slf4j:slf4j-api:1.7.30')
-    implementation('org.slf4j:slf4j-simple:1.7.30')
     implementation('io.jsonwebtoken:jjwt-api:0.11.0')
     implementation('io.jsonwebtoken:jjwt-impl:0.11.0')
     implementation('io.jsonwebtoken:jjwt-jackson:0.11.0')
     implementation('org.bouncycastle:bcpg-jdk15on:1.64')
     implementation('org.bouncycastle:bcpkix-jdk15on:1.64')
+    testImplementation('org.slf4j:slf4j-simple:1.7.30')
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.5.2')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.5.2')
