--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 
     implementation 'org.bouncycastle:bcpg-jdk15on:1.64'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.64'
+    implementation 'io.springfox:springfox-swagger2:2.9.2'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 }
 
 test {
