--- a/build.gradle
+++ b/build.gradle
@@ -10,3 +10,9 @@ project(':iam-service') {
         implementation project(':iam-core')
     }
 }
+
+project(':iam-persistence') {
+    dependencies {
+        implementation project(':iam-core')
+    }
+}
