--- a/iam-core/build.gradle
+++ b/iam-core/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation('io.jsonwebtoken:jjwt-jackson:0.11.0')
     implementation('org.bouncycastle:bcpg-jdk15on:1.64')
     implementation('org.bouncycastle:bcpkix-jdk15on:1.64')
+    implementation('com.fasterxml.jackson.core:jackson-annotations:2.10.2')
     testImplementation('org.slf4j:slf4j-simple:1.7.30')
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.5.2')
