--- a/iam-persistence/build.gradle
+++ b/iam-persistence/build.gradle
@@ -12,6 +12,11 @@ repositories {
 
 dependencies {
     implementation('org.slf4j:slf4j-api:1.7.30')
+    implementation('com.fasterxml.jackson.core:jackson-core:2.10.2')
+    implementation('com.fasterxml.jackson.core:jackson-databind:2.10.2')
+    implementation('com.fasterxml.jackson.core:jackson-annotations:2.10.2')
+    implementation('org.bouncycastle:bcpg-jdk15on:1.64')
+    implementation('org.bouncycastle:bcpkix-jdk15on:1.64')
     testImplementation('org.slf4j:slf4j-simple:1.7.30')
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.5.2')
