--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,6 @@ include "iam-core"
 include "iam-service"
 include "iam-persistence-file-system"
 project(":iam-persistence-file-system").projectDir = new File("iam-persistence/iam-persistence-file-system")
+
+include "iam-resource-server"
+project(":iam-resource-server").projectDir = new File("iam-examples/iam-resource-server")
