--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,11 @@ project(':iam-persistence-file-system') {
     }
 }
 
+project(':iam-persistence-in-memory') {
+    dependencies {
+        implementation project(':iam-core')
+    }
+}
+
 project(':iam-resource-server') {
 }
