--- a/iam-service/src/main/resources/application.yml
+++ b/iam-service/src/main/resources/application.yml
@@ -7,6 +7,8 @@ iam-service:
   cache-cleanup-interval:
     duration: 1
     timeunit: MINUTES
-  admin-credentials:
+  data-storage:
     password: secret
+    persistence: in-memory #options: in-memory | file-system
+    #path: /path/to/model-storage.json #only for file-system persistence
 
