improved health check rest api

--- a/iam-service/src/main/resources/application.yml
+++ b/iam-service/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 #  servlet:
 #    context-path: /auth
 iam-service:
+  system-config:
+    id: iam-service-001
+    name: 'IAM service'
   authorization-code-cache:
     duration: 10
     timeunit: MINUTES
