--- a/iam-service/src/main/resources/application.yml
+++ b/iam-service/src/main/resources/application.yml
@@ -17,3 +17,6 @@ iam-service:
     persistence: in-memory #options: in-memory | file-system
     #path: /path/to/model-storage.json #only for file-system persistence
 
+logging:
+  level:
+    root: INFO
