--- a/iam-core/build.gradle
+++ b/iam-core/build.gradle
@@ -22,7 +22,9 @@ dependencies {
     implementation('com.fasterxml.jackson.core:jackson-annotations:2.10.4')
     implementation('com.fasterxml.jackson.core:jackson-core:2.10.4')
     implementation('com.fasterxml.jackson.core:jackson-databind:2.10.4')
+
     testImplementation('org.slf4j:slf4j-simple:1.7.30')
+    testImplementation('com.nimbusds:nimbus-jose-jwt:7.8.1')
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.5.2')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.5.2')
