--- a/iam-common/iam-model/build.gradle
+++ b/iam-common/iam-model/build.gradle
@@ -14,6 +14,10 @@ dependencies {
     implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.0')
     implementation('com.fasterxml.jackson.core:jackson-core:2.11.0')
     implementation('com.fasterxml.jackson.core:jackson-databind:2.11.0')
+
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.6.2')
 }
 
 test {
