--- a/iam-common/iam-client/build.gradle
+++ b/iam-common/iam-client/build.gradle
@@ -11,6 +11,16 @@ repositories {
 }
 
 dependencies {
+    implementation('org.slf4j:slf4j-api:1.7.30')
+    implementation('com.nimbusds:nimbus-jose-jwt:8.9')
+    implementation('com.squareup.okhttp3:okhttp:4.7.2')
+    implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.0')
+    implementation('com.fasterxml.jackson.core:jackson-core:2.11.0')
+    implementation('com.fasterxml.jackson.core:jackson-databind:2.11.0')
+
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.6.2')
 }
 
 test {
