--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,13 @@ project(':iam-client') {
     }
 }
 
+project(':iam-client-spring') {
+    dependencies {
+        implementation project(':iam-model')
+        implementation project(':iam-client')
+    }
+}
+
 project(':iam-core') {
     dependencies {
         implementation project(':iam-model')
