--- a/iam-examples/spring-method-security/src/main/resources/application.yml
+++ b/iam-examples/spring-method-security/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 iam-client:
   organization-id: iam-admins
   project-id: iam-admins
-  base-url: http://localhost:8080/services/authentication
+  base-url: http://127.0.0.1:8080/services/authentication
   polling-interval: 30
   time-unit: SECONDS
 
