--- a/iam-examples/spring-resource-server/src/main/resources/application.yml
+++ b/iam-examples/spring-resource-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: iam-admins
-          jwk-set-uri: http://localhost:8080/services/authentication/iam-admins/iam-admins/.well-known/jwks.json
+          jwk-set-uri: http://127.0.0.1:8080/services/authentication/iam-admins/iam-admins/.well-known/jwks.json
           jws-algorithm: RS2561
 
 logging:
