--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,5 @@ include "spring-resource-server"
 project(":spring-resource-server").projectDir = new File("iam-examples/spring-resource-server")
 include "spring-method-security"
 project(":spring-method-security").projectDir = new File("iam-examples/spring-method-security")
+include "spring-method-security-IT"
+project(":spring-method-security-IT").projectDir = new File("iam-examples/spring-method-security-IT")
