--- a/iam-service/src/main/resources/application.yml
+++ b/iam-service/src/main/resources/application.yml
@@ -13,8 +13,9 @@ iam-service:
   cache-cleanup-interval:
     duration: 1
     timeunit: MINUTES
-  data-storage:
-    password: secret
+  data-model:
+    defaultAdminPassword: secret
+    defaultAdminSecret: top-secret
     persistence: in-memory #options: in-memory | file-system
     #path: /path/to/model-storage.json #only for file-system persistence
 
