--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ include "iam-client"
 project(":iam-client").projectDir = new File("iam-common/iam-client")
 include "iam-client-spring"
 project(":iam-client-spring").projectDir = new File("iam-common/iam-client-spring")
+include "iam-spring-httpclient"
+project(":iam-spring-httpclient").projectDir = new File("iam-common/iam-spring-httpclient")
 
 include "iam-core"
 include "iam-service"
