--- a/iam-service/src/main/resources/application.yml
+++ b/iam-service/src/main/resources/application.yml
@@ -16,8 +16,8 @@ iam-service:
   data-model:
     admin-organization: iam-admins
     admin-project: iam-admins
-    defaultAdminPassword: secret
-    defaultAdminSecret: top-secret
+    default-admin-password: secret
+    default-admin-secret: top-secret
     persistence: in-memory #options: in-memory | file-system
     #path: /path/to/model-storage.json #only for file-system persistence
 
