--- a/iam-examples/spring-resource-server/Dockerfile
+++ b/iam-examples/spring-resource-server/Dockerfile
@@ -1,3 +1,6 @@
 FROM adoptopenjdk/openjdk11:jre-11.0.7_10-alpine
 COPY build/libs/spring-resource-server-1.0.0-SNAPSHOT.jar /spring-resource-server-1.0.0-SNAPSHOT.jar
-ENTRYPOINT ["java", "-Xms32m", "-Xms128M", "-jar","/spring-resource-server-1.0.0-SNAPSHOT.jar"]
+COPY start-service.sh /start-service.sh
+RUN chmod +x /start-service.sh
+RUN apk --no-cache add curl
+ENTRYPOINT ["/start-service.sh"]
