--- a/iam-examples/spring-resource-server/build.gradle
+++ b/iam-examples/spring-resource-server/build.gradle
@@ -21,5 +21,11 @@ dependencies {
 }
 
 test {
+	if (System.properties['test.profile'] != 'integration') {
+		exclude '**/*TestsIT*'
+	}
 	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
 }
