enabled gracefum shutdown for example spring applications

--- a/iam-examples/spring-method-security/src/main/resources/application.yml
+++ b/iam-examples/spring-method-security/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port:  8082
+  shutdown: graceful
+spring:
+  lifecycle:
+    timeout-per-shutdown-phase: 20s
 
 iam-client:
   organization-id: iam-admins
