--- a/iam-examples/spring-resource-server/src/main/resources/application.yml
+++ b/iam-examples/spring-resource-server/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8081
+  shutdown: graceful
 
 spring:
   security:
@@ -9,6 +10,8 @@ spring:
           issuer-uri: iam-admins
           jwk-set-uri: http://127.0.0.1:8080/services/authentication/iam-admins/iam-admins/.well-known/jwks.json
           jws-algorithm: RS256
+  lifecycle:
+    timeout-per-shutdown-phase: 20s
 
 logging:
   level:
