--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
   - export PATH=gradle-6.5/bin:$PATH
   - gradle -version
 script:
-  - gradle clean build test
+  - gradle clean build jacocoTestReport
 
