--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -22,8 +22,7 @@ dependencies {
 
     implementation 'org.bouncycastle:bcpg-jdk15on:1.65'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.65'
-    implementation 'io.springfox:springfox-swagger2:2.9.2'
-    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 test {
