--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'org.bouncycastle:bcpg-jdk15on:1.65'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.65'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+    testImplementation 'com.nimbusds:nimbus-jose-jwt:8.18.1'
 }
 
 test {
