--- a/release/Dockerfile.x86_64
+++ b/release/Dockerfile.x86_64
@@ -1,3 +1,4 @@
+# Compatible with Architecture: x86_64 systems (Intel, AMD)
 FROM adoptopenjdk/openjdk11:jre-11.0.7_10-alpine
 COPY iam-service-1.0.0-SNAPSHOT.jar /iam-service-1.0.0-SNAPSHOT.jar
 ENTRYPOINT ["java", "-Xms32m", "-Xms128m", "-jar","/iam-service-1.0.0-SNAPSHOT.jar"]
