--- a/iam-service/Dockerfile
+++ b/iam-service/Dockerfile
@@ -3,6 +3,7 @@ COPY build/libs/iam-service-1.0.0-SNAPSHOT.jar /iam-service-1.0.0-SNAPSHOT.jar
 COPY iam-service-start.sh /iam-service-start.sh
 RUN chmod +x /iam-service-start.sh
 RUN mkdir -p /opt/data
+ENV XMX 128m
 ENV SERVER_PORT 8080
 ENV ADMIN_PASSWORD secret
 ENV ADMIN_SECRET top-secret
