--- a/release/Dockerfile.x86_64
+++ b/release/Dockerfile.x86_64
@@ -1,4 +1,12 @@
 # Compatible with Architecture: x86_64 systems (Intel, AMD)
 FROM adoptopenjdk/openjdk11:jre-11.0.7_10-alpine
 COPY iam-service-1.0.0-SNAPSHOT.jar /iam-service-1.0.0-SNAPSHOT.jar
-ENTRYPOINT ["java", "-Xms32m", "-Xms128m", "-jar","/iam-service-1.0.0-SNAPSHOT.jar"]
+COPY iam-service-start.sh /iam-service-start.sh
+RUN chmod +x /iam-service-start.sh
+RUN mkdir -p /opt/data
+ENV XMX 128m
+ENV SERVER_PORT 8080
+ENV ADMIN_PASSWORD secret
+ENV ADMIN_SECRET top-secret
+ENV APP_CONFIG_PATH false
+ENTRYPOINT ["/iam-service-start.sh"]
