--- a/release/Dockerfile.aarch64
+++ b/release/Dockerfile.aarch64
@@ -2,4 +2,12 @@
 # Tested on AWS (a1.large)  ARM (Cortex-A72), Architecture: aarch64
 FROM arm64v8/openjdk:11.0.7-jre-slim-buster
 COPY iam-service-1.0.0-SNAPSHOT.jar /iam-service-1.0.0-SNAPSHOT.jar
-ENTRYPOINT ["java", "-Xms32m", "-Xms128m", "-jar","/iam-service-1.0.0-SNAPSHOT.jar"]
+COPY iam-service-start.sh /iam-service-start.sh
+RUN chmod +x /iam-service-start.sh
+RUN mkdir -p /opt/data
+ENV XMX 128m
+ENV SERVER_PORT 8080
+ENV ADMIN_PASSWORD secret
+ENV ADMIN_SECRET top-secret
+ENV APP_CONFIG_PATH false
+ENTRYPOINT ["/iam-service-start.sh"]
