--- a/release/Dockerfile.armv7l
+++ b/release/Dockerfile.armv7l
@@ -3,4 +3,12 @@
 # Tested on RaspberryPI 3 Model B+, ARM (Cortex-A53), Architecture: armv7l
 FROM adoptopenjdk/openjdk11:armv7l-debianslim-jdk-11.0.7_10-slim
 COPY iam-service-1.0.0-SNAPSHOT.jar /iam-service-1.0.0-SNAPSHOT.jar
-ENTRYPOINT ["java", "-Xms32m", "-Xms128m", "-jar","/iam-service-1.0.0-SNAPSHOT.jar"]
+COPY iam-service-start.sh /iam-service-start.sh
+RUN chmod +x /iam-service-start.sh
+RUN mkdir -p /opt/data
+ENV XMX 128m
+ENV SERVER_PORT 8080
+ENV ADMIN_PASSWORD secret
+ENV ADMIN_SECRET top-secret
+ENV APP_CONFIG_PATH false
+ENTRYPOINT ["/iam-service-start.sh"]
