--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -16,12 +16,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 
-    implementation 'org.bouncycastle:bcpg-jdk15on:1.65'
-    implementation 'org.bouncycastle:bcpkix-jdk15on:1.65'
+    implementation 'org.bouncycastle:bcpg-jdk15on:1.66'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     testImplementation 'com.nimbusds:nimbus-jose-jwt:8.18.1'
