--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Check Gradle version
         run: gradle -version
       - name: Run Gradle Build and tests
-        run: gradle clean build test
+        run: gradle clean build test -i
 #      - name: Run full test suite
 #        run: ./run-full-test-suite.sh
