--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 
     implementation 'org.bouncycastle:bcpg-jdk15on:1.66'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.4.8'
 
     testImplementation 'com.nimbusds:nimbus-jose-jwt:8.18.1'
 }
