--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -24,8 +24,7 @@ dependencies {
     implementation 'org.bouncycastle:bcpg-jdk15on:1.66'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
     implementation 'org.springdoc:springdoc-openapi-ui:1.4.8'
-
-    testImplementation 'com.nimbusds:nimbus-jose-jwt:8.18.1'
+    implementation('com.nimbusds:nimbus-jose-jwt:8.18.1')
 }
 
 test {
