--- a/iam-common/iam-client/build.gradle
+++ b/iam-common/iam-client/build.gradle
@@ -12,11 +12,14 @@ repositories {
 
 dependencies {
     implementation('org.slf4j:slf4j-api:1.7.30')
-    implementation('com.nimbusds:nimbus-jose-jwt:8.19')
+    implementation('io.jsonwebtoken:jjwt-api:0.11.1')
+    implementation('io.jsonwebtoken:jjwt-impl:0.11.1')
     implementation('com.squareup.okhttp3:okhttp:4.7.2')
     implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.2')
     implementation('com.fasterxml.jackson.core:jackson-core:2.11.2')
     implementation('com.fasterxml.jackson.core:jackson-databind:2.11.2')
+    implementation 'org.bouncycastle:bcpg-jdk15on:1.66'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
 
     testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.2')
