--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,13 @@ project(':iam-spring-httpclient') {
     }
 }
 
+project(':iam-service-client') {
+    dependencies {
+        implementation project(':iam-model')
+        implementation project(':iam-core')
+    }
+}
+
 project(':iam-core') {
     dependencies {
         implementation project(':iam-model')
@@ -65,6 +72,7 @@ project(':iam-service') {
         implementation project(':iam-persistence-file-system')
         implementation project(':iam-persistence-in-memory')
         testImplementation project(':iam-spring-httpclient')
+        testImplementation project(':iam-service-client')
     }
 }
 
