--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -17,14 +17,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
 
     implementation 'org.bouncycastle:bcpg-jdk15on:1.66'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
     implementation 'org.springdoc:springdoc-openapi-ui:1.4.8'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    testImplementation 'com.squareup.okhttp3:okhttp:4.9.0'
 }
 
 test {
