--- a/iam-service/src/main/resources/application.yml
+++ b/iam-service/src/main/resources/application.yml
@@ -20,6 +20,7 @@ iam-service:
   data-model:
     default-admin-password: secret
     default-admin-client-secret: top-secret
+    default-admin-email: admin@email.com
     persistence: in-memory #options: in-memory | file-system
     #path: /path/to/model-storage.json #only for file-system persistence
 
