junit test cleanup

--- a/iam-examples/spring-method-security/build.gradle
+++ b/iam-examples/spring-method-security/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testImplementation('com.squareup.okhttp3:okhttp:4.9.0')
 }
 
 test {
