--- a/iam-examples/spring-resource-server/build.gradle
+++ b/iam-examples/spring-resource-server/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 	}
 }
 
+springBoot {
+}
+
 test {
 	if (System.properties['test.profile'] != 'integration') {
 		exclude '**/*TestsIT*'
