--- a/iam-examples/spring-method-security/build.gradle
+++ b/iam-examples/spring-method-security/build.gradle
@@ -14,11 +14,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation('org.springframework.boot:spring-boot-starter-security')
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.1'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
+	implementation 'org.bouncycastle:bcpg-jdk15on:1.66'
+	implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation('com.squareup.okhttp3:okhttp:4.9.0')
+}
+
+springBoot {
 }
 
 test {
