--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,12 @@ project(":iam-service-client").projectDir = new File("iam-common/iam-service-cli
 
 include "iam-core"
 include "iam-service"
+
 include "iam-persistence-file-system"
 project(":iam-persistence-file-system").projectDir = new File("iam-persistence/iam-persistence-file-system")
+
+include "iam-persistence-mongo"
+project(":iam-persistence-mongo").projectDir = new File("iam-persistence/iam-persistence-mongo")
 
 include "spring-resource-server"
 project(":spring-resource-server").projectDir = new File("iam-examples/spring-resource-server")
