--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ project(':iam-service') {
         implementation project(':iam-client')
         implementation project(':iam-client-spring')
         implementation project(':iam-persistence-file-system')
+        implementation project(':iam-persistence-mongo')
         testImplementation project(':iam-service-client')
     }
 }
