--- a/build.gradle
+++ b/build.gradle
@@ -63,11 +63,19 @@ project(':iam-service') {
         implementation project(':iam-client')
         implementation project(':iam-client-spring')
         implementation project(':iam-persistence-file-system')
+        implementation project(':iam-persistence-mongo')
         testImplementation project(':iam-service-client')
     }
 }
 
 project(':iam-persistence-file-system') {
+    dependencies {
+        implementation project(':iam-model')
+        implementation project(':iam-core')
+    }
+}
+
+project(':iam-persistence-mongo') {
     dependencies {
         implementation project(':iam-model')
         implementation project(':iam-core')
