--- a/iam-service/src/main/resources/application.yml
+++ b/iam-service/src/main/resources/application.yml
@@ -21,8 +21,21 @@ iam-service:
     default-admin-password: secret
     default-admin-client-secret: top-secret
     default-admin-email: admin@email.com
-    persistence: in-memory #options: in-memory | file-system
-    #path: /path/to/model-storage.json #only for file-system persistence
+
+    #options: in-memory | file-system | mongo-db
+    persistence: in-memory
+
+    #only for file-system persistence
+    #persistence: file-system
+    #path: /path/to/model-storage.json
+
+    #only for mongo-db persistence
+    #persistence: mongo-db
+    #mongo-host: localhost
+    #mongo-port: 27017
+    #mongo-database: iam-service-db
+    #mongo-username: iam-admin
+    #mongo-password: secret
 
 logging:
   level:
