--- a/iam-persistence/iam-persistence-mongo/build.gradle
+++ b/iam-persistence/iam-persistence-mongo/build.gradle
@@ -15,10 +15,17 @@ dependencies {
     implementation('com.fasterxml.jackson.core:jackson-core:2.11.2')
     implementation('com.fasterxml.jackson.core:jackson-databind:2.11.2')
     implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.2')
+    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.2')
     implementation('org.bouncycastle:bcpg-jdk15on:1.66')
     implementation('org.bouncycastle:bcpkix-jdk15on:1.66')
-    implementation('org.mongodb:mongodb-driver-sync:4.1.0')
-    implementation('org.mongojack:mongojack:4.0.2')
+
+    implementation('org.mongodb:mongodb-driver-sync:4.1.1')
+    implementation 'org.mongodb:mongodb-driver-core:4.1.1'
+    implementation ('org.mongojack:mongojack:4.0.2') {
+        exclude group: 'org.mongodb', module: 'mongodb-driver-sync'
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
+        exclude group: 'com.fasterxml.jackson.datatype', module: 'jackson-datatype-jsr310'
+    }
 
     testImplementation('org.slf4j:slf4j-simple:1.7.30')
     testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
