--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -23,8 +23,13 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.4.8'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
 
-    implementation 'org.mongodb:mongodb-driver-sync:4.1.0'
-    implementation 'org.mongojack:mongojack:4.0.2'
+    implementation 'org.mongodb:mongodb-driver-sync:4.1.1'
+    implementation 'org.mongodb:mongodb-driver-core:4.1.1'
+    implementation ('org.mongojack:mongojack:4.0.2') {
+        exclude group: 'org.mongodb', module: 'mongodb-driver-sync'
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
+        exclude group: 'com.fasterxml.jackson.datatype', module: 'jackson-datatype-jsr310'
+    }
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
