--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -31,6 +31,8 @@ dependencies {
         exclude group: 'com.fasterxml.jackson.datatype', module: 'jackson-datatype-jsr310'
     }
 
+    implementation('redis.clients:jedis:3.3.0')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
