--- a/release/docker-compose.yml
+++ b/release/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       - 27017:27017
     volumes:
       - mongodb_data_container:/data/db
+  redis_container:
+    image: redis:6.0.9-alpine
+    network_mode: host
+    ports:
+      - 6379:6379
 
 volumes:
   mongodb_data_container:
