--- a/iam-common/iam-client-spring/build.gradle
+++ b/iam-common/iam-client-spring/build.gradle
@@ -16,21 +16,21 @@ repositories {
 
 dependencies {
     implementation('org.slf4j:slf4j-api:1.7.30')
-    implementation('org.apache.tomcat.embed:tomcat-embed-core:9.0.38')
-    implementation('org.springframework:spring-context:5.2.9.RELEASE')
-    implementation('org.springframework.boot:spring-boot:2.3.4.RELEASE')
-    implementation('org.springframework:spring-web:5.2.9.RELEASE')
-    implementation('org.springframework.security:spring-security-core:5.3.4.RELEASE')
+    implementation('org.apache.tomcat.embed:tomcat-embed-core:9.0.39')
+    implementation('org.springframework:spring-context:5.3.1')
+    implementation('org.springframework.boot:spring-boot:2.4.0')
+    implementation('org.springframework:spring-web:5.3.1')
+    implementation('org.springframework.security:spring-security-core:5.4.1')
     implementation('io.jsonwebtoken:jjwt-api:0.11.1')
     implementation('io.jsonwebtoken:jjwt-impl:0.11.1')
 
-    implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.2')
-    implementation('com.fasterxml.jackson.core:jackson-core:2.11.2')
-    implementation('com.fasterxml.jackson.core:jackson-databind:2.11.2')
+    implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.3')
+    implementation('com.fasterxml.jackson.core:jackson-core:2.11.3')
+    implementation('com.fasterxml.jackson.core:jackson-databind:2.11.3')
 
-    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.2')
-    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.6.2')
+    testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
 }
 
 test {
