--- a/release/Dockerfile.aarch64
+++ b/release/Dockerfile.aarch64
@@ -1,7 +1,7 @@
 # Tested on AWS (m6g.large) ARM Graviton2 (Neoverse-N1), Architecture: aarch64
 # Tested on AWS (a1.large)  ARM (Cortex-A72), Architecture: aarch64
 FROM arm64v8/openjdk:11.0.8-jre-slim-buster
-COPY iam-service-1.2.0-SNAPSHOT.jar /iam-service-1.2.0-SNAPSHOT.jar
+COPY iam-service-1.3.0-RELEASE.jar /iam-service-1.3.0-RELEASE.jar
 COPY iam-service-start.sh /iam-service-start.sh
 RUN chmod +x /iam-service-start.sh
 RUN mkdir -p /opt/data
