--- a/iam-examples/spring-resource-server/Dockerfile
+++ b/iam-examples/spring-resource-server/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk/openjdk11:jre-11.0.9_11-alpine
-COPY build/libs/spring-resource-server-1.2.0-SNAPSHOT.jar /spring-resource-server-1.2.0-SNAPSHOT.jar
+COPY build/libs/spring-resource-server-1.3.0-RELEASE.jar /spring-resource-server-1.3.0-RELEASE.jar
 COPY start-service.sh /start-service.sh
 RUN chmod +x /start-service.sh
 RUN apk --no-cache add curl
