--- a/iam-common/iam-client-spring/build.gradle
+++ b/iam-common/iam-client-spring/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'one.microproject.iamservice'
 archivesBaseName = "iam-client-spring"
-version = '1.2.0-SNAPSHOT'
+version = '1.3.0-RELEASE'
 
 sourceCompatibility = '11'
 
