--- a/iam-common/iam-model/build.gradle
+++ b/iam-common/iam-model/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'one.microproject.iamservice'
 archivesBaseName = "iam-model"
-version = '1.2.0-SNAPSHOT'
+version = '1.3.0-RELEASE'
 
 sourceCompatibility = '11'
 
