--- a/iam-examples/spring-resource-server/build.gradle
+++ b/iam-examples/spring-resource-server/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'one.microproject.iamservice'
-version = '1.2.0-SNAPSHOT'
+version = '1.3.0-RELEASE'
 sourceCompatibility = '11'
 
 repositories {
