--- a/iam-service/Dockerfile
+++ b/iam-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk/openjdk11:jre-11.0.9_11-alpine
-COPY build/libs/iam-service-1.2.0-SNAPSHOT.jar /iam-service-1.2.0-SNAPSHOT.jar
+COPY build/libs/iam-service-1.3.0-RELEASE.jar /iam-service-1.3.0-RELEASE.jar
 COPY iam-service-start.sh /iam-service-start.sh
 RUN chmod +x /iam-service-start.sh
 RUN mkdir -p /opt/data
