--- a/release/Dockerfile.x86_64
+++ b/release/Dockerfile.x86_64
@@ -1,6 +1,6 @@
 # Compatible with Architecture: x86_64 systems (Intel, AMD)
 FROM adoptopenjdk/openjdk11:jre-11.0.9_11-alpine
-COPY iam-service-1.3.0-RELEASE.jar /iam-service-1.3.0-RELEASE.jar
+COPY iam-service-2.0.0-SNAPSHOT.jar /iam-service-2.0.0-SNAPSHOT.jar
 COPY iam-service-start.sh /iam-service-start.sh
 RUN chmod +x /iam-service-start.sh
 RUN mkdir -p /opt/data
