--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,9 +3,9 @@ name: Build and Test
 
 on:
   push:
-    branches: [ master, 1.3.0-RELEASE ]
+    branches: [ master, 1.3.0-RELEASE, 2.x.x ]
   pull_request:
-    branches: [ master, 1.3.0-RELEASE ]
+    branches: [ master, 1.3.0-RELEASE, 2.x.x ]
 
 jobs:
   build:
