--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   iam-service:
-    image: iam-service:1.3.0-RELEASE
+    image: iam-service:2.0.0-SNAPSHOT
     build:
       context: iam-service
       dockerfile: Dockerfile
@@ -14,7 +14,7 @@ services:
       timeout: 1s
       retries: 5
   spring-method-security:
-    image: spring-method-security:1.3.0-RELEASE
+    image: spring-method-security:2.0.0-SNAPSHOT
     build:
       context: iam-examples/spring-method-security
       dockerfile: Dockerfile
@@ -24,7 +24,7 @@ services:
     depends_on:
       - iam-service
   spring-resource-server:
-    image: spring-resource-server:1.3.0-RELEASE
+    image: spring-resource-server:2.0.0-SNAPSHOT
     build:
       context: iam-examples/spring-resource-server
       dockerfile: Dockerfile
