--- a/iam-common/iam-client/build.gradle
+++ b/iam-common/iam-client/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'one.microproject.iamservice'
 archivesBaseName = "iam-client"
-version = '1.3.0-RELEASE'
+version = '2.0.0-SNAPSHOT'
 
 sourceCompatibility = '11'
 
