--- a/iam-examples/spring-method-security/Dockerfile
+++ b/iam-examples/spring-method-security/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk/openjdk11:jre-11.0.9_11-alpine
-COPY build/libs/spring-method-security-1.3.0-RELEASE.jar /spring-method-security-1.3.0-RELEASE.jar
+COPY build/libs/spring-method-security-2.0.0-SNAPSHOT.jar /spring-method-security-2.0.0-SNAPSHOT.jar
 COPY start-service.sh /start-service.sh
 RUN chmod +x /start-service.sh
 RUN apk --no-cache add curl
