--- a/iam-examples/integration-tests/build.gradle
+++ b/iam-examples/integration-tests/build.gradle
@@ -1,6 +1,4 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.0'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
 }
 
@@ -13,26 +11,30 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.1'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
     implementation 'org.bouncycastle:bcpg-jdk15on:1.67'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.67'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
-    testImplementation 'io.projectreactor:reactor-test'
+
+    testImplementation('org.slf4j:slf4j-simple:1.7.30')
+    testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
     testImplementation('com.squareup.okhttp3:okhttp:4.9.0')
 }
 
 test {
-    if (System.properties['test.profile'] != 'integration') {
-        exclude '**/*TestsIT*'
+    if (System.properties['test.profile'] != 'integration-setup') {
+        exclude '**/*TestsITSetup*'
+    }
+    if (System.properties['test.profile'] != 'integration-cleanup') {
+        exclude '**/*TestsITCleanup*'
     }
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
     }
     testLogging.showStandardStreams = true
+    systemProperty "iamservice.url", System.getProperty("iamservice.url")
 }
