--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,8 @@ include "iam-caches-redis"
 project(":iam-caches-redis").projectDir = new File("iam-persistence/iam-caches-redis")
 
 // Spring EXAMPLES
+include "integration-tests"
+project(":integration-tests").projectDir = new File("iam-examples/integration-tests")
 include "spring-resource-server"
 project(":spring-resource-server").projectDir = new File("iam-examples/spring-resource-server")
 include "spring-method-security"
