created config option for default model client credentials flow enabled

--- a/iam-service/src/main/resources/application.yml
+++ b/iam-service/src/main/resources/application.yml
@@ -27,6 +27,7 @@ iam-service:
     default-admin-password: secret
     default-admin-client-secret: top-secret
     default-admin-email: admin@email.com
+    enable-client-credentials-flow: true
 
     #options: in-memory | file-system | mongo-db
     persistence: in-memory
