--- a/iam-examples/spring-method-security/Dockerfile
+++ b/iam-examples/spring-method-security/Dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk11:jre-11.0.9_11-alpine
+FROM adoptopenjdk/openjdk11:alpine-jre
 COPY build/libs/spring-method-security-2.3.0-SNAPSHOT.jar /spring-method-security-2.3.0-SNAPSHOT.jar
 COPY start-service.sh /start-service.sh
 RUN chmod +x /start-service.sh
