--- a/release/Dockerfile.arm64v8
+++ b/release/Dockerfile.arm64v8
@@ -1,6 +1,7 @@
 # Tested on AWS (m6g.large) ARM Graviton2 (Neoverse-N1), Architecture: aarch64
 # Tested on AWS (a1.large)  ARM (Cortex-A72), Architecture: aarch64
-FROM arm64v8/openjdk:11.0.8-jre-slim-buster
+
+FROM arm64v8/adoptopenjdk:11-jre-hotspot-focal
 COPY iam-service-2.3.0-SNAPSHOT.jar /iam-service-2.3.0-SNAPSHOT.jar
 COPY iam-service-start.sh /iam-service-start.sh
 RUN chmod +x /iam-service-start.sh
