--- a/release/Dockerfile.arm64v8
+++ b/release/Dockerfile.arm64v8
@@ -3,13 +3,14 @@
 
 #https://hub.docker.com/r/arm64v8/adoptopenjdk
 FROM arm64v8/adoptopenjdk:11-jre-hotspot-focal
-COPY iam-service-2.3.0-SNAPSHOT.jar /iam-service-2.3.0-SNAPSHOT.jar
+COPY iam-service-2.4.0-SNAPSHOT.jar /iam-service-2.4.0-SNAPSHOT.jar
 COPY iam-service-start.sh /iam-service-start.sh
+COPY application-filesystem.yml /application.yml
 RUN chmod +x /iam-service-start.sh
 RUN mkdir -p /opt/data
 ENV XMX 128m
 ENV SERVER_PORT 8080
 ENV ADMIN_PASSWORD secret
 ENV ADMIN_SECRET top-secret
-ENV APP_CONFIG_PATH false
+ENV APP_CONFIG_PATH "/application.yml"
 ENTRYPOINT ["/iam-service-start.sh"]
